<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/activity_mynews_drawer_topstories"
                android:title="@string/Top_Stories"
                android:checkable="false"/>
            <item
                android:id="@+id/activity_mynews_drawer_mostpopular"
                android:title="@string/Most_popular"
                android:checkable="false"/>
            <item
                android:id="@+id/activity_mynews_drawer_business"
                android:title="@string/Business"
                android:checkable="false"/>
        </group>
</menu>
