<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activity.SearchActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/search_activity_term_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Search_query_term"
        android:inputType="text"
        android:paddingLeft="10dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="64dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Begin_Date"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/End_Date"
            android:layout_alignParentTop="true"
            android:layout_marginStart="200dp"
            android:layout_marginTop="0dp"/>
            />

        <EditText
            android:id="@+id/date_begin_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="date"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/baseline_arrow_drop_down_black_24dp"
            android:onClick="showDateBeginPickerDialog"/>

        <EditText
            android:id="@+id/date_end_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="date"
            android:layout_alignParentTop="true"
            android:layout_marginStart="200dp"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="300dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/baseline_arrow_drop_down_black_24dp"
            android:onClick="showDateEndPickerDialog"/>

    </RelativeLayout>

    <include
        layout="@layout/check_box_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/Search_button" />



</LinearLayout>